--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
   <h1>This is Git Tutorial</h1>
 
   <h2>This is changed after adding file to the directory</h2>
+
+  <ul>
+    <li>List Item 1</li>
+    <li>List Item 2</li>
+    <li>List Item 3</li>
+    <li>List Item 4</li>
+    <li>List Item 5</li>
+  </ul>
 </body>
 </html>
